@@ -25,7 +25,7 @@ buildscript {
   }
   dependencies {
     classpath 'tech.pegasys.internal.license.reporter:license-reporter:1.0.1'
-    classpath 'org.owasp:dependency-check-gradle:8.2.1'
+    classpath 'org.owasp:dependency-check-gradle:8.4.2'
   }
 }
 
@@ -37,17 +37,16 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'me.champeau.gradle.jmh' version '0.5.3' apply false
   id 'net.ltgt.errorprone' version '2.0.2'
-  id 'org.ajoberstar.grgit' version '4.1.1'
+  id 'org.ajoberstar.grgit' version '5.2.0'
 }
 
-if (!JavaVersion.current().java11Compatible) {
-  throw new GradleException("Java 11 or later is required to build Web3Signer.\n" +
+if (!JavaVersion.current().isCompatibleWith(JavaVersion.VERSION_17)) {
+  throw new GradleException("Java 17 or later is required to build Web3Signer.\n" +
   "  Detected version ${JavaVersion.current()}")
 }
 
 rootProject.version = calculatePublishVersion()
 def specificVersion = calculateVersion()
-def isDevelopBuild = rootProject.version.contains('develop')
 
 group = 'tech.pegasys.web3signer'
 
@@ -109,8 +108,8 @@ allprojects {
     from javadoc.destinationDir
   }
 
-  sourceCompatibility = 11
-  targetCompatibility = 11
+  sourceCompatibility = 17
+  targetCompatibility = 17
 
   repositories {
     // mavenLocal() //for local testing only, uncomment while testing locally build signers.
@@ -167,6 +166,12 @@ allprojects {
     skipProjects = [
       ':acceptance-tests'
     ]
+    analyzers {
+      retirejs {
+        enabled = false
+      }
+      assemblyEnabled = false
+    }
   }
 
   tasks.withType(JavaCompile) {
@@ -373,6 +378,8 @@ applicationDefaultJvmArgs = [
   "--add-opens",
   "java.base/java.nio=ALL-UNNAMED",
   "-Dio.netty.tryReflectionSetAccessible=true",
+  "--add-exports",
+  "jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED",
 ]
 
 run {
@@ -462,7 +469,7 @@ tasks.register("dockerDistUntar") {
 }
 
 def dockerImage = "consensys/web3signer"
-def dockerJdkVariants = ["jdk17", "jdk11",]
+def dockerJdkVariants = ["jdk17",]
 def dockerBuildDir = "build/docker-web3signer/"
 
 task distDocker  {
@@ -506,21 +513,29 @@ task testDocker {
   }
 }
 
+def dockerTagPrefixes(String dockerBuildVersion) {
+  def versionPrefixes = [dockerBuildVersion]
+  if (project.hasProperty('branch') && project.property('branch') == 'master') {
+    versionPrefixes.add('develop')
+  }
+
+  // add `latest` tag for non-develop and non-rc versions
+  if (!rootProject.version.contains('develop') && !rootProject.version.toLowerCase().contains('-rc')) {
+    versionPrefixes.add('latest')
+    // when docker build version is x.y.[a,b..] we would also like to use tag x.y
+    versionPrefixes.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
+  }
+
+  return versionPrefixes
+}
+
 task uploadDocker {
   dependsOn([distDocker])
   def dockerBuildVersion = "${rootProject.version}".replace('+', '-')
   def architecture = System.getenv('architecture')
   def platform = System.getenv('platform')
 
-  def versionPrefixes = [dockerBuildVersion]
-  if (project.hasProperty('branch') && project.property('branch') == 'master') {
-    versionPrefixes.add('develop')
-  }
-
-  if (!isDevelopBuild) {
-    versionPrefixes.add('latest')
-    versionPrefixes.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
-  }
+  def versionPrefixes = dockerTagPrefixes(dockerBuildVersion)
 
   doLast {
     for (def variant in dockerJdkVariants) {
@@ -557,17 +572,8 @@ task uploadDocker {
 
 task manifestDocker {
   def dockerBuildVersion = "${rootProject.version}".replace('+', '-')
-  def versionPrefixes = [dockerBuildVersion]
+  def versionPrefixes = dockerTagPrefixes(dockerBuildVersion)
   def platforms = ["arm64", "amd64"]
-
-  if (project.hasProperty('branch') && project.property('branch') == 'master') {
-    versionPrefixes.add('develop')
-  }
-
-  if (!isDevelopBuild) {
-    versionPrefixes.add('latest')
-    versionPrefixes.add(dockerBuildVersion.split(/\./)[0..1].join('.'))
-  }
 
   doLast {
     for (def variant in dockerJdkVariants) {
